kubernetes/deploy-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-notion-rss-feeds
spec:
  selector:
    matchLabels:
      app: get-notion-rss-feeds
  template:
    metadata:
      labels:
        app: get-notion-rss-feeds
    spec:
      containers:
        - image: get-notion-rss-feeds:0.0.12
          name: get-notion-rss-feeds
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1000m"
              memory: "1024Mi"
