kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-notion-rss-feeds
spec:
  selector:
    matchLabels:
      app: get-notion-rss-feeds
  template:
    metadata:
      labels:
        app: get-notion-rss-feeds
    spec:
      containers:
        - image: ghcr.io/hsiaofongw/get-notion-rss-feeds:0.0.2
          name: get-notion-rss-feeds
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
