kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-notion-rss-feeds
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: get-notion-rss-feeds
