kubernetes/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-notion-rss-feeds-svc-node-ip
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: get-notion-rss-feeds
